# auto_poster

./: .gitignore  common.yml  docker-compose.yml  pyproject.toml  sample.env
backend/: gunicorn.conf.py
backend/apps/main/: adapters.py  admin.py  apps.py  logics.py  models.py  signals.py  tasks.py  utils.py
backend/apps/main/management/commands/: bot.py
backend/apps/main/migrations/: 0001_initial.py  0002_post_post_type.py  0003_postmedia_media_type.py  0004_plannedposts_count_max_posts_plannedposts_interval.py  0005_alter_plannedposts_interval.py  0006_alter_plannedposts_options_alter_post_options_and_more.py  0007_alter_plannedposts_interval.py  0008_remove_plannedposts_count_max_posts_and_more.py  0009_alter_telegramchennels_channel_name_and_more.py  0010_post_post_code_alter_post_content.py
backend/config/: celery.py  settings.py  urls.py  wsgi.py
etc/compose/backend/: Dockerfile
etc/compose/nginx/: default.conf
